[tool.uv]
link-mode = "copy"  # Avoid hardlink warnings on Windows/OneDrive

[project]
name = "GenAI_Examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16.1",
    "pg8000==1.31.2",
    "psycopg2-binary==2.9.10",
    "pip==25.1.1",
    "psutil==7.0.0",
    "requests==2.32.4",
    "python-dotenv==1.1.0",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.7",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
    "pinecone==6.0.0",
    "langchain==0.3.25",
    "streamlit==1.45.1",
    "pyreadline3==3.5.4",
    "authlib==1.6.0",
    "pymupdf==1.26.1",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "odfpy==1.4.1",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "PyPDF2>=3.0.0",
    "fastapi",
    "uvicorn",
    "chardet>=5.0.0",
    "exa-py>=1.0.7,<2.0.0", # Exa AI - latest stable 1.0.7, allows minor updates
    "google-search-results>=2.4.2,<3.0.0", # SerpAPI - latest 2.4.2, legacy but stable
    "requests>=2.32.0,<3.0.0", # HTTP library - latest 2.32.5, widely used
    "multidict>=6.1.0,<6.5.0",
    # Debugging/Observability
    "agentops>=0.4.0,<1.0.0", # Latest stable 0.4.19, allows minor updates
    "voyageai>=0.3.4",
    "pymilvus>=2.6.1",
    "pdfplumber>=0.11.7",
    "langchain-openai>=0.3.32",
    "langchain>=0.2.11",
    "tqdm>=4.67.1",
    "cachetools>=5.5.2",
    "openai>=1.107.1",
]
